# naturalchain

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  justfile  pyproject.toml
.streamlit/: docker_config.toml
deployed_networks/: gnosis_chiado.md  linea_goerli.md  mantle.md  neon.md  optimism.md  polygon_mumbai.md  scroll.md  sepolia.md
ideas/: deployments.md  ideas.md
naturalchain/: utils.py
naturalchain/agents/: default.py  information_retrieval.py  smart_contract_agent.py  structured_chat.py
naturalchain/cli/: main.py
naturalchain/tools/: __init__.py
naturalchain/tools/calculator/: tool.py
naturalchain/tools/coin_information_retriever/: tool.py
naturalchain/tools/graph/: tool.py
naturalchain/tools/rpc/: tool.py
naturalchain/tools/sign_tx/: tool.py  trial.py
naturalchain/tools/smart_contract_compiler/: tool.py
naturalchain/tools/smart_contract_deployer/: tool.py
naturalchain/tools/smart_contract_identifier/: tool.py
naturalchain/tools/smart_contract_writer/: tool.py
prompts/: gnosis_command.txt  naturalchain_token.text
